bundled_metadata/force-app/main/default/objects/POS_Kits__c/POS_Kits__c.object-meta.xml
<CustomObject>
    <label>POS Kits</label>
    <nameField>
        <label>POS Kits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS Kits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>