bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Description__c.field-meta.xml
<CustomField>
    <fullName>AFH_Description__c</fullName>
    <description>Stores the short description of the POS Kit displayed on the detail page.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>