bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Is_OutofStock__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_OutofStock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the POS Kit is currently out of stock.</description>
    <label>Is Out of Stock</label>
    <type>Checkbox</type>
</CustomField>