bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_PosKit_Brand__c.field-meta.xml
<CustomField>
    <fullName>AFH_PosKit_Brand__c</fullName>
    <description>Stores the brand associated with the POS Kit. Used to filter and display POS Kits by brand.</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Brand</valueSetName>
    </valueSet>
</CustomField>