bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_PosKit_Channel__c.field-meta.xml
<CustomField>
    <fullName>AFH_PosKit_Channel__c</fullName>
    <description>Stores the channels for which the POS Kit is available. Used to filter kits based on the user’s channel.</description>
    <label>POS Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Channel</valueSetName>
    </valueSet>
</CustomField>