bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>AFH_Product_Information__c</fullName>
    <description>Stores additional information or details about the POS Kit product.</description>
    <label>Product Information</label>
    <type>TextArea</type>
</CustomField>