bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Product_Material__c.field-meta.xml
<CustomField>
    <fullName>AFH_Product_Material__c</fullName>
    <description>Stores the material details of the POS Kit.</description>
    <label>Product Material</label>
    <length>200</length>
    <type>Text</type>
</CustomField>