bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Product_Size__c.field-meta.xml
<CustomField>
    <fullName>AFH_Product_Size__c</fullName>
    <description>Stores the size specifications of the POS Kit.</description>
    <label>Product Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>