bundled_metadata/force-app/main/default/objects/POS_Kits__c/fields/AFH_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Type__c</fullName>
    <label>AFH Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>