bundled_metadata/force-app/main/default/objects/POS_Kits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    
    <columns>AFH_Description__c</columns>
    <columns>AFH_Is_OutofStock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>